@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: ipmiconsole_defs.h,v 1.65.10.1 2008-12-09 17:24:42 chu11 Exp $
+ *  $Id: ipmiconsole_defs.h,v 1.65.10.2 2008-12-09 18:42:13 chu11 Exp $
  *****************************************************************************
  *  Copyright (C) 2007-2008 Lawrence Livermore National Security, LLC.
  *  Copyright (C) 2006-2007 The Regents of the University of California.
