@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: ipmi_monitoring.c,v 1.32.2.2 2008-11-27 15:38:58 chu11 Exp $
+ *  $Id: ipmi_monitoring.c,v 1.32.2.3 2008-12-09 18:42:14 chu11 Exp $
  *****************************************************************************
  *  Copyright (C) 2007-2008 Lawrence Livermore National Security, LLC.
  *  Copyright (C) 2006-2007 The Regents of the University of California.
