@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: ipmipower_prompt.c,v 1.96.4.2 2008-11-27 04:29:08 chu11 Exp $
+ *  $Id: ipmipower_prompt.c,v 1.96.4.3 2008-12-09 18:42:16 chu11 Exp $
  *****************************************************************************
  *  Copyright (C) 2007-2008 Lawrence Livermore National Security, LLC.
  *  Copyright (C) 2003-2007 The Regents of the University of California.
