@@ -2,6 +2,8 @@
 ----------------
 o Support output of "<username-not-set-yet>" in bmc-config for fields
 that require a username to be configured before data may be retrieved.
+o Support supermicr reset-intrusion OEM command ipmi-oem.
+o Support --list option in ipmi-oem.
 o Add Intel IPMI 2.0 workaround for SOL connection in ipmiconsole.
 o Fix Intel IPMI 2.0 workarounds in ipmiconsole.
 o Fix state machine cycle corner case in ipmiconsole/libipmiconsole.
