@@ -1,5 +1,10 @@
 2008-12-09  Albert Chu <chu11@llnl.gov>
 
+	* ipmi-oem/: Add supermicro reset-intrusion oem command.  Add
+	--list option support.
+	
+2008-12-09  Albert Chu <chu11@llnl.gov>
+
 	* ipmiconsole/src/libipmiconsole/ipmiconsole_ctx.c,
 	ipmiconsole/src/libipmiconsole/ipmiconsole_defs.h,
 	ipmiconsole/src/libipmiconsole/ipmiconsole_processing.c
